[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/quests/Quests.gd" type="Script" id=2]
[ext_resource path="res://ui/button.png" type="Texture" id=3]
[ext_resource path="res://ui/ButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://ui/ButtonHover.png" type="Texture" id=5]
[ext_resource path="res://Dialog/menu_section_9patch.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Quests" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 622.429
margin_top = 69.4901
margin_right = 1022.43
margin_bottom = 115.49
texture = ExtResource( 6 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 753.109
margin_top = 83.082
margin_right = 823.109
margin_bottom = 123.082
custom_fonts/font = SubResource( 1 )
text = "Quests"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Label"]
margin_left = -119.073
margin_top = 33.1416
margin_right = 270.927
margin_bottom = 433.142
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestingQuest" type="HBoxContainer" parent="Label/List"]
margin_right = 390.0
margin_bottom = 25.0
custom_constants/separation = 0

[node name="Description" type="RichTextLabel" parent="Label/List/TestingQuest"]
margin_right = 301.0
margin_bottom = 25.0
rect_min_size = Vector2( 301, 0 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Test all residents who live in D1"
text = "Test all residents who live in D1"

[node name="Status" type="RichTextLabel" parent="Label/List/TestingQuest"]
margin_left = 301.0
margin_right = 390.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 25 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "(2/9)"
text = "(2/9)"

[node name="HelmetQuest" type="HBoxContainer" parent="Label/List"]
margin_top = 29.0
margin_right = 390.0
margin_bottom = 54.0
custom_constants/separation = 8

[node name="Description" type="RichTextLabel" parent="Label/List/HelmetQuest"]
margin_right = 390.0
margin_bottom = 25.0
rect_min_size = Vector2( 308, 25 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Get your helmet from work"
text = "Get your helmet from work"

[node name="ConvinceQuest" type="HBoxContainer" parent="Label/List"]
margin_top = 58.0
margin_right = 390.0
margin_bottom = 83.0
custom_constants/separation = 0

[node name="Description" type="RichTextLabel" parent="Label/List/ConvinceQuest"]
margin_right = 325.0
margin_bottom = 25.0
rect_min_size = Vector2( 325, 0 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Convince people to wear helmets"
text = "Convince people to wear helmets"

[node name="Status" type="RichTextLabel" parent="Label/List/ConvinceQuest"]
margin_left = 325.0
margin_right = 390.0
margin_bottom = 25.0
rect_min_size = Vector2( 45, 25 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "(0/9)"
text = "(0/9)"

[node name="IdkQuest1" type="HBoxContainer" parent="Label/List"]
margin_top = 87.0
margin_right = 390.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 0

[node name="Description" type="RichTextLabel" parent="Label/List/IdkQuest1"]
margin_right = 390.0
margin_bottom = 25.0
rect_min_size = Vector2( 296, 0 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Try to test coughing people??"
text = "Try to test coughing people??"

[node name="IdkQuest2" type="HBoxContainer" parent="Label/List"]
margin_top = 116.0
margin_right = 390.0
margin_bottom = 141.0
custom_constants/separation = 0

[node name="Description" type="RichTextLabel" parent="Label/List/IdkQuest2"]
margin_right = 390.0
margin_bottom = 25.0
rect_min_size = Vector2( 296, 25 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Convince mayor to do something???"
text = "Convince mayor to do something???"

[node name="IdkQuest3" type="HBoxContainer" parent="Label/List"]
margin_top = 145.0
margin_right = 390.0
margin_bottom = 170.0
custom_constants/separation = 0

[node name="Description" type="RichTextLabel" parent="Label/List/IdkQuest3"]
margin_right = 390.0
margin_bottom = 25.0
rect_min_size = Vector2( 296, 25 )
rect_clip_content = false
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Make sure no one dies????"
text = "Make sure no one dies????"

[node name="TextureButton" type="TextureButton" parent="Label"]
margin_left = 80.809
margin_top = -4.81554
margin_right = 138.809
margin_bottom = 35.1845
rect_scale = Vector2( 1, 0.72 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Label/TextureButton"]
margin_left = 5.1897
margin_top = 5.74586
margin_right = 55.1897
margin_bottom = 45.7459
rect_scale = Vector2( 0.947174, 1.34511 )
custom_fonts/font = SubResource( 1 )
text = "hide"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="Label/TextureButton" to="." method="_on_TextureButton_toggled"]
